deployments/kustomize/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-finder-backend
spec:
  selector:
    matchLabels:
      app: book-finder-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: book-finder-backend
    spec:
      containers:
      - name: backend
        image: bennymestel/book-finder-backend:latest
        ports:
        - containerPort: 5000
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
