deployments/kustomize/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-finder-frontend
spec:
  selector:
    app: book-finder-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8501
  type: ClusterIP
